# rlforge

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: actor_critic_agents.rst  conf.py  environments.rst  examples.rst  experiment_runner.rst  function_approximation_agents.rst  index.rst  installation.rst  policies.rst  policy_gradient_agents.rst  semi_gradient_agents.rst  tabular_agents.rst  utils.rst
docs/source/_static/: custom.css
docs/source/agents/: bandit_agent.rst  base_agent.rst
docs/source/environments/: bandits.rst  dyna_maze.rst  mecanum_car.rst  obstacle_avoidance.rst  pendulum.rst  (+3 more)
examples/: DDPG_pendulum.ipynb  DQN_mountainCar.ipynb  DQN_pytorch_cartPole.ipynb  DQN_pytorch_mountainCar.ipynb  PPO_CartPole.ipynb  PPO_MountainCar.ipynb  PPO_continuos.ipynb  PPO_pendulum.ipynb  PPO_pid.ipynb  REINFORCE_shortCorridor.ipynb  SAC_pendulum.ipynb  TD3_pendulum.ipynb  actorCritic_pendulum.ipynb  dynaArchitecture_planningAgents.ipynb  k_bandits.ipynb  linearFunctionApproximation_mountainCar.ipynb  obstacle_avoidance.ipynb  qlearning_mecanumCar.ipynb  sarsa_frozenLake.ipynb  tabularMethods_comparison.ipynb  trajectory_tracking.ipynb
rlforge/: experiments.py  policies.py  utils.py
rlforge/agents/: __init__.py  bandit.py  base_agent.py  dqn.py  expected_sarsa.py  gaussian_actor_critic.py  planning_agent.py  q_agent.py  sarsa.py
rlforge/environments/: __init__.py  bandits.py  dyna_maze.py  mecanum_car.py  obstacle_avoidance.py  pendulum.py  pid.py  short_corridor.py  shortcut_maze.py  trajectory_tracking.py
rlforge/feature_extraction/: __init__.py  tile_coder.py
rlforge/function_approximation/: __init__.py  linear_regression.py  mlp.py
rlforge/optimizers/: adam_optimizer.py
(+54 files in other folders)
