[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlforge"
version = "1.0.0"
authors = [
    { name="Alejandro Toro-Ossaba", email="alejotoro.o@gmail.com" },
]
description = "Reinforcement Learning for Everyone."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["reinforcement learning", "machine learning"]
license = {file = "LICENSE"}
dependencies = [
    "numpy>=2.3.4",
    "tqdm>=4.67.1",
    "gymnasium>=1.2.2",
    "matplotlib>=3.10.7",
]
[project.optional-dependencies]
torch = [
    "torch>=2.9.0",
]
all = [
    "torch>=2.9.0",
]

[project.urls]
"Homepage" = "https://github.com/alejotoro-o/rlforge"
"Documentation" = "https://rlforge.readthedocs.io/"
"Repository" = "https://github.com/alejotoro-o/rlforge"
"Bug Tracker" = "https://github.com/alejotoro-o/rlforge/issues"